[tool.poetry]
name = "hexlet-code"
version = "0.7.0"
description = "Set of 5 brain games for brain training."
classifiers = [
    "Operating System :: Windows",
    "Operating System :: POSIX :: Linux"
]
authors = ["Mike Kolotovich <k2punk@gmail.com>",]
readme = "README.md"
packages = [
  { include = "brain_games" },
]
repository = "https://github.com/mkolotovich/python-project-49"

[tool.poetry.dependencies]
python = "^3.10"
prompt = "^0.4.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"